UI update - zmaina wygladu profilu uzytkownika + formularz zmiany hasla

--- a/MyProject/templates/accounts/password_change.html
+++ b/MyProject/templates/accounts/password_change.html
@@ -1,23 +1,30 @@
 {% extends "base.html" %}
 
-{% block main %} 
-    <form action="" method=POST>
-        {% csrf_token %}
-        <div class="mb-3">
-            <label for="first_name" class="form-label">Nowe Hasło: </label>
-            {{ form.new_password1 }}
-        </div>
-        <ul>
-            <li>Twoje hasło nie powinno pokrywać się z Twoimi danymi </li>
-            <li>Twoje hasło powinno się składać z minimum 8 znaków</li>
-            <li>Twoje hasło nie powinno być zbyt powszechne</li>
-            <li>Twoje hasło nie powinno zawierać samych cyfr</li>
-        </ul>
-        <div class="mb-3">
-            <label for="last_name" class="form-label">Powtórz Hasło:</label>
-            {{ form.new_password2 }}
-        </div>
-        <p>Hasła musza się zgadzać</p>
-        <button type="submit" class="btn btn-primary">Zmień Hasło</button>
-    </form>
+{% block main %}
+    <div class="cred-form rounded-3">
+        <form action="" method=POST>
+            {% csrf_token %}
+            <label for="changePassword1" class="form-label"><strong>Hasło</strong></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                    {{ form.new_password1 }}
+                </div>
+            <label for="changePassword1" class="form-label">Nowe Hasło: </label>
+            <ul>
+                <li>Twoje hasło nie powinno pokrywać się z Twoimi danymi </li>
+                <li>Twoje hasło powinno się składać z minimum 8 znaków</li>
+                <li>Twoje hasło nie powinno być zbyt powszechne</li>
+                <li>Twoje hasło nie powinno zawierać samych cyfr</li>
+            </ul>
+            <label for="changePassword2" class="form-label"><strong>Powtórz Hasło</strong></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                    {{ form.new_password2 }}
+                </div>
+            <p>Oba hasła musza się zgadzać</p>
+            <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
+                <button type="submit" class="btn btn-primary rounded-pill">Zmień Hasło</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
