--- a/MyProject/templates/accounts/register.html
+++ b/MyProject/templates/accounts/register.html
@@ -31,6 +31,7 @@
                 {{form.password2}}
             </div>
             <p>Oba hasła musza się zgadzać</p>
+            <p><input type="checkbox" required name="terms"> Wyrażam zgodę na przetwarzanie moich danych osobowych <u>Terms and Conditions</u></p>
             <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
                 <button type="submit" class="btn btn-primary rounded-pill">Zarejestruj się</button>
             </div>
