--- a/MyProject/static/css/style.css
+++ b/MyProject/static/css/style.css
@@ -29,6 +29,18 @@ body::-webkit-scrollbar {
 .navbar-light .navbar-nav .nav-item > .nav-link:hover {
     color: lightgray;
 }
+
+.dropdown-menu a{
+    color: #111111 !important;
+}
+
+.dropdown-menu a:hover{
+    background: #6c757d!important;
+    color: #f8f9fa !important;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out; }
+
 /*--------Search Bar---------*/
 form#search-bar{
     margin: auto;
@@ -82,7 +94,7 @@ div#pets-container .pet-list{
     cursor: pointer;
     margin: 1em;
     border-radius: 1em;
-    background-color: rgb(233 239 239); /*Wcześniej był rgb(208, 216, 216);*/
+    background-color: rgb(235 235 235); /*rgb(233 239 239);*/ /*Wcześniej był rgb(208, 216, 216);*/
     box-shadow: 
     rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, 
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
@@ -138,33 +150,49 @@ nav#pagination {
 }
 
 /*----------User Profile-----------*/
-section#user-profile{
+section#user-profile {
     display: flex;
+    width: auto;
+    height: auto;
     margin: auto;
 }
 
-#u-profile-left{
+#u-profile-left {
+    width: auto;
+    height: auto;
     padding: 1em;
     margin-left: 0px;
-    background-color: aqua;
+    background: #F2994A;
+    background: -webkit-linear-gradient(to right, #F2C94C, #F2994A);
+    background: linear-gradient(to right, #F2C94C, #F2994A);
+}
+#u-profile-left span{
+    display: flex;
+    justify-content: center;
+    padding: 0.4em;
+    height: auto;
+    width: auto;
+    margin: auto;
+    font-size: 5em;
+    background-color: rgb(233 239 239);
+    border: 0.05em solid black;
+}
+#u-profile-left span.rounded-circle{
+    margin-bottom:  0.25em;
+
 }
 
-#u-profile-right{
+#u-profile-right {
+    width: auto;
+    height: auto;
     padding: 1em;
     margin-right: 0px;
     background-color: rgb(248, 248, 248);
-}
-
-.text-muted {
-    color: #9098a0 
-}
-
-.f-w-600 {
-    font-weight: 600;
+    
 }
 
 /*----------Mobile Version-----------*/
-@media only screen and (max-width: 900px){ 
+@media only screen and (max-width: 900px) { 
 
     div#main {
         margin: 1em;
@@ -184,7 +212,7 @@ section#user-profile{
         align-items: center;
     }
 
-    div#pets-container .pet-list{
+    div#pets-container .pet-list {
         margin: 1em;
     }
 
@@ -196,10 +224,17 @@ section#user-profile{
     .cred-form {
         width: auto;
     }
+
     section#user-profile{
         flex-direction: column;
     }
 }
 
+/*----------Pozostałe-----------*/
+.text-muted {
+    color: #9098a0 
+}
 
-
+.f-w-600 {
+    font-weight: 600;
+}
