--- a/MyProject/templates/accounts/profile.html
+++ b/MyProject/templates/accounts/profile.html
@@ -7,11 +7,13 @@
     <H1>Twój profil użytkownika</H1> 
         {% csrf_token %}
     {% block container %}
-        <section id="user-profile" class="border border-5">
+        <section id="user-profile" class="rounded border border-5">
             <div id="u-profile-left" class="col-sm-4">
-                <div class="mb-3">
-                    <label for="first_name" class="form-label">Nazwa użytkownika:</label>
-                    <p>{{ request.user }}</p>
+                <div class="row m-2 p-4">
+                    <span class="rounded-circle">
+                        <i class="fas fa-user"></i>
+                    </span>
+                    <h3 class="text-center">{{ request.user }}</h3>
                 </div>
             </div>
             
@@ -29,7 +31,7 @@
                     </div>
                 </div>
 
-                <div class="row  m-2">
+                <div class="row m-2">
                     <h6 class="border-bottom p-2">Dane kontaktowe</h6>
                     <div class="col-sm-6 mb-3">
                         <p class="f-w-600">Telefon</p>
@@ -40,8 +42,10 @@
                         <h6 class="text-muted">{{ request.user.region }}</h6> 
                     </div>
                 </div>
-                <a class="btn btn-primary" href="{%url 'profile_edit' %}" role="button">Edytuj</a>
-                <a class="btn btn-primary" href="{%url 'password_change' %}" role="button">Zmień hasło</a>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                    <a class="btn btn-primary" href="{%url 'profile_edit' %}" role="button">Edytuj</a>
+                    <a class="btn btn-primary" href="{%url 'password_change' %}" role="button">Zmień hasło</a>
+                </div>
             </div>
         </section>
     {% endblock %}
