--- a/MyProject/templates/template_parts/search_bar.html
+++ b/MyProject/templates/template_parts/search_bar.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <label class="sr-only" for="check_number">Chip Number</label>
-        <input type="number" class="form-control" id="check_number" name="check_number" placeholder="Wpisz numer id zwierzęcia">
+        <input type="number" class="form-control" id="check_number" name="check_number" placeholder="Wpisz numer mikroczipu">
         <div class="input-group-append">
             <button type="submit" id="search-button" class="btn btn-dark">
                 <i class="fas fa-search"></i>
