--- a/MyProject/static/css/style.css
+++ b/MyProject/static/css/style.css
@@ -166,7 +166,8 @@ section#user-profile {
     background: -webkit-linear-gradient(to right, #F2C94C, #F2994A);
     background: linear-gradient(to right, #F2C94C, #F2994A);
 }
-#u-profile-left span{
+
+#u-profile-left span.rounded-circle{
     display: flex;
     justify-content: center;
     padding: 0.4em;
@@ -176,8 +177,6 @@ section#user-profile {
     font-size: 5em;
     background-color: rgb(233 239 239);
     border: 0.05em solid black;
-}
-#u-profile-left span.rounded-circle{
     margin-bottom:  0.25em;
 
 }
@@ -187,8 +186,46 @@ section#user-profile {
     height: auto;
     padding: 1em;
     margin-right: 0px;
-    background-color: rgb(248, 248, 248);
-    
+    background-color: rgb(248, 248, 248);    
+}
+
+
+/*----------Pet Profile-----------*/
+section#pet-profile {
+    display: flex;
+    width: auto;
+    height: auto;
+    margin: auto;
+}
+
+#p-profile-left {
+    width: auto;
+    height: auto;
+    padding: 1em;
+    margin-left: 0px;
+    background: #F2994A;
+    background: -webkit-linear-gradient(to right, #F2C94C, #F2994A);
+    background: linear-gradient(to right, #F2C94C, #F2994A);
+}
+
+#p-profile-left div{
+    width: 400px;
+    min-height: 400px;
+    max-height: auto;
+}
+
+#p-profile-left img{
+    max-width: 100%;
+    height: auto;
+}
+
+
+#p-profile-right {
+    width: auto;
+    height: auto;
+    padding: 1em;
+    margin-right: 0px;
+    background-color: rgb(248, 248, 248);    
 }
 
 /*----------Mobile Version-----------*/
@@ -228,6 +265,15 @@ section#user-profile {
     section#user-profile{
         flex-direction: column;
     }
+
+    section#pet-profile{
+        flex-direction: column;
+    }
+
+    #p-profile-left div{
+        width: auto;
+      height: auto;
+    }
 }
 
 /*----------Pozostałe-----------*/
@@ -237,4 +283,14 @@ section#user-profile {
 
 .f-w-600 {
     font-weight: 600;
+}
+
+.gen-col-m {
+    font-size: 18px;
+    color: #0d6efd
+}
+
+.gen-col-f{
+    font-size: 18px;
+    color: #ff1493
 }
