--- a/MyProject/templates/accounts/password_change.html
+++ b/MyProject/templates/accounts/password_change.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block main %}
-    <div class="cred-form rounded-3">
+    <div class="cred-form  border rounded border-3 shadow">
         <form action="" method=POST>
             {% csrf_token %}
-            <label for="changePassword1" class="form-label"><strong>Hasło</strong></label>
+            <label for="changePassword1" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
                     {{ form.new_password1 }}
@@ -16,7 +16,7 @@
                 <li>Twoje hasło nie powinno być zbyt powszechne</li>
                 <li>Twoje hasło nie powinno zawierać samych cyfr</li>
             </ul>
-            <label for="changePassword2" class="form-label"><strong>Powtórz Hasło</strong></label>
+            <label for="changePassword2" class="form-label"><h6 class="border-bottom p-2">Powtórz Hasło</h6></label>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
                     {{ form.new_password2 }}
