--- a/MyProject/templates/pets/edit_pet.html
+++ b/MyProject/templates/pets/edit_pet.html
@@ -3,44 +3,47 @@
 {% block title %}Edytuj swoje zwierzę{% endblock %}
 
 {% block main %}
-    <form action="." method=POST enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="mb-3">
-            <label for="chip_number" class="form-label">Numer</label>
-            {{ form.chip_number }}
-        </div>
-        <div class="mb-3">
-            <label for="pet_type" class="form-label">Gatunek</label>
-            {{ form.pet_type }}
-        </div>
-        <div class="mb-3">
-            <label for="pet_name" class="form-label">Imię</label>
-            {{ form.pet_name }}
-        </div>
-        <div class="mb-3">
-            <label for="gender" class="form-label">Płeć</label>
-            {{ form.gender }}
-        </div>
-        <div class="mb-3">
-            <label for="image" class="form-label">Zdjęcie</label>
-            {{ form.image }}
-            <img src="{{form.initial.image.url}}" height="300px" width="300px" alt="image" id="image_preview">
-        </div>
-        <div class="mb-3">
-            <label for="desc" class="form-label">Opis</label>
-            {{ form.desc }}
-        </div>
-        <div class="mb-3">
-            <label for="desc" class="form-label">Zaginął</label>
-            {{ form.is_lost }}
-        </div>
-        <div class="mb-3">
-            <label for="desc" class="form-label">Województwo</label>
-            {{ form.region }}
-        </div>
-        <button type="submit" class="btn btn-primary">Edytuj zwierzę</button>
-    </form>
-    
+    <H1>Edytuj profil swojego pupila</H1>
+    <section id="user-edit"class="profile border rounded border-3 shadow ">
+        <form action="." method=POST enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="image" class="form-label">Zdjęcie</label>
+                {{ form.image }}
+                <img src="{{form.initial.image.url}}" height="300px" width="300px" alt="image" id="image_preview">
+            </div>
+            <div class="mb-3">
+                <label for="chip_number" class="form-label">Numer</label>
+                {{ form.chip_number }}
+            </div>
+            <div class="mb-3">
+                <label for="pet_type" class="form-label">Gatunek</label>
+                {{ form.pet_type }}
+            </div>
+            <div class="mb-3">
+                <label for="pet_name" class="form-label">Imię</label>
+                {{ form.pet_name }}
+            </div>
+            <div class="mb-3">
+                <label for="gender" class="form-label">Płeć</label>
+                {{ form.gender }}
+            </div>
+          
+            <div class="mb-3">
+                <label for="desc" class="form-label">Opis</label>
+                {{ form.desc }}
+            </div>
+            <div class="mb-3">
+                <label for="desc" class="form-label">Zaginął</label>
+                {{ form.is_lost }}
+            </div>
+            <div class="mb-3">
+                <label for="desc" class="form-label">Województwo</label>
+                {{ form.region }}
+            </div>
+            <button type="submit" class="btn btn-primary">Edytuj zwierzę</button>
+        </form>
+    </section>
     <script>
         const imgInput = document.querySelector("#id_image")
         const displayImg = document.querySelector("#image_preview")
