--- a/MyProject/templates/pets/my_pets.html
+++ b/MyProject/templates/pets/my_pets.html
@@ -18,7 +18,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-                <a class="btn btn-primary" href=   role="button" id="delete">Usuń</a>
+                <a class="btn btn-danger" href=   role="button" id="delete">Usuń</a>
             </div>
         </div>
         </div>
