--- a/MyProject/templates/pets/profile.html
+++ b/MyProject/templates/pets/profile.html
@@ -5,7 +5,7 @@
 {% block main %}
     {% block container %}
         {% for item in all %}
-            <section id="pet-profile" class="rounded border border-5">
+            <section class=" profile rounded border border-5">
                 <div id="p-profile-left" class="col-sm-4">
                     <div class="row m-2 p-4">
                         <div class="col">
