--- a/MyProject/templates/accounts/login.html
+++ b/MyProject/templates/accounts/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block main %} 
-    <div class="cred-form rounded-3 ">
+    <div class="cred-form border rounded border-3 shadow ">
         <form action="" method=POST>
             {% csrf_token %}
-            <label for="inputLogin" class="form-label"> <strong>Nazwa użytkownika lub e-mail:</strong></label>
+            <label for="inputLogin" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika lub e-mail</h6></label>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
                 <input id="inputLogin"type="text" class="form-control" name="username" aria-describedby="loginHelp" placeholder="np. test123 | test123@gmail.com">
             </div>
-            <label for="inputPassword" class="form-label"><strong>Hasło: </strong></label>
+            <label for="inputPassword" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1"><i class="fas fa-unlock"></i></span>
                 <input id="inputPassword"type="password" class="form-control" name="password" placeholder="******">
