--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -59,7 +59,9 @@
                   {%else%}
                     <div class="dropdown">
                       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-user" style="font-size: 36px;"></i></a> Gość
+                        <span class="f-w-600">
+                          <i class="fas fa-user" style="font-size: 36px;"></i></a> Gość
+                        </span>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="{%url 'login'%}">Zaloguj się</a>
