--- a/MyProject/templates/about.html
+++ b/MyProject/templates/about.html
@@ -1,3 +1,19 @@
 {% extends 'base.html' %}
+{%load  static %}
 
 {% block title %} O nas {% endblock %}
+
+{% block main %}
+            {% block container %}
+                <section class="container">
+                    <section class="about ">
+                        <div class="about-left col-sm-6 mb-3">
+                            <img src={% static 'images/about_2.jpg' %} class="img-fluid" alt="" srcset="">
+                        </div>
+                        <div class="about-right col-sm-6 mb-3">
+                            lorem iposahjasfhnajksasnjfasfknaskanasjknkansknknfaska
+                        </div>
+                    </section>
+                </section>
+            {% endblock %} 
+{% endblock %}
