--- a/MyProject/templates/accounts/login.html
+++ b/MyProject/templates/accounts/login.html
@@ -1,25 +1,27 @@
 {% extends "base.html" %}
 
 {% block main %} 
-    <div class="cred-form border rounded border-3 shadow ">
-        <form action="" method=POST>
-            {% csrf_token %}
-            <label for="inputLogin" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika lub e-mail</h6></label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
-                <input id="inputLogin"type="text" class="form-control" name="username" aria-describedby="loginHelp" placeholder="np. test123 | test123@gmail.com">
-            </div>
-            <label for="inputPassword" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="fas fa-unlock"></i></span>
-                <input id="inputPassword"type="password" class="form-control" name="password" placeholder="******">
-            </div>
-            <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
-                <button type="submit" class="btn btn-primary rounded-pill">Zaloguj się</button>
-            </div>
-            <div class="text-center">
-                <p>Nie masz konta? <a href="{%url 'register'%}">Zarejestruj się</a></p>
-            </div>
-        </form>
-    </div>
+    {% block container %}
+        <div class="cred-form border rounded border-3 shadow">
+            <form action="" method=POST>
+                {% csrf_token %}
+                <label for="inputLogin" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika lub e-mail</h6></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                    <input id="inputLogin"type="text" class="form-control" name="username" aria-describedby="loginHelp" placeholder="np. test123 | test123@gmail.com">
+                </div>
+                <label for="inputPassword" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-unlock"></i></span>
+                    <input id="inputPassword"type="password" class="form-control" name="password" placeholder="******">
+                </div>
+                <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
+                    <button type="submit" class="btn btn-primary rounded-pill">Zaloguj się</button>
+                </div>
+                <div class="text-center">
+                    <p>Nie masz konta? <a href="{%url 'register'%}">Zarejestruj się</a></p>
+                </div>
+            </form>
+        </div>
+    {% endblock %}
 {% endblock %}
