--- a/MyProject/templates/accounts/register.html
+++ b/MyProject/templates/accounts/register.html
@@ -1,43 +1,45 @@
 {% extends "base.html" %}
 
 {% block main %}
-    <div class="cred-form border rounded border-3 shadow "> 
-        <form method=POST action="" >
-            {% csrf_token %}
-            <label for="username" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika</h6></label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
-                {{form.username}}
-            </div>
-            <label for="email" class="form-label"> <h6 class="border-bottom p-2">Adres E-mail</h6></label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="far fa-envelope"></i></span>
-                {{form.email}}
-            </div>
-            <label for="password1" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
-                {{form.password1}}
-            </div>
-            <ul>
-                <li>Twoje hasło nie powinno pokrywać się z Twoimi danymi </li>
-                <li>Twoje hasło powinno się składać z minimum 8 znaków</li>
-                <li>Twoje hasło nie powinno być zbyt powszechne</li>
-                <li>Twoje hasło nie powinno zawierać samych cyfr</li>
-            </ul>
-            <label for="password2" class="form-label"><h6 class="border-bottom p-2">Powtórz Hasło</h6></label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
-                {{form.password2}}
-            </div>
-            <p>Oba hasła musza się zgadzać</p>
-            <p><input type="checkbox" required name="terms"> Wyrażam zgodę na przetwarzanie moich danych osobowych <u>Terms and Conditions</u></p>
-            <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
-                <button type="submit" class="btn btn-primary rounded-pill">Zarejestruj się</button>
-            </div>
-            <div class="text-center">
-                <p>Masz już konto? <a href="{%url 'login'%}">Zaloguj się</a></p>
-            </div>
-        </form>
-    </div>
+    {% block container %}
+        <div class="cred-form border rounded border-3 shadow"> 
+            <form action="" method=POST >
+                {% csrf_token %}
+                <label for="username" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika</h6></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                    {{form.username}}
+                </div>
+                <label for="email" class="form-label"> <h6 class="border-bottom p-2">Adres E-mail</h6></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="far fa-envelope"></i></span>
+                    {{form.email}}
+                </div>
+                <label for="password1" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                    {{form.password1}}
+                </div>
+                <ul>
+                    <li>Twoje hasło nie powinno pokrywać się z Twoimi danymi </li>
+                    <li>Twoje hasło powinno się składać z minimum 8 znaków</li>
+                    <li>Twoje hasło nie powinno być zbyt powszechne</li>
+                    <li>Twoje hasło nie powinno zawierać samych cyfr</li>
+                </ul>
+                <label for="password2" class="form-label"><h6 class="border-bottom p-2">Powtórz Hasło</h6></label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                    {{form.password2}}
+                </div>
+                <p>Oba hasła musza się zgadzać</p>
+                <p><input type="checkbox" required name="terms"> Wyrażam zgodę na przetwarzanie moich danych osobowych <u>Terms and Conditions</u></p>
+                <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
+                    <button type="submit" class="btn btn-primary rounded-pill">Zarejestruj się</button>
+                </div>
+                <div class="text-center">
+                    <p>Masz już konto? <a href="{%url 'login'%}">Zaloguj się</a></p>
+                </div>
+            </form>
+        </div>
+    {% endblock %}
 {% endblock %}
