--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -40,27 +40,28 @@
                     <div class="dropdown">
                       <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                          <span class="f-w-600">  
-                          <i class="fas fa-user" style="font-size: 36px;"></i>
                             {% if request.user.is_superuser%}
+                            <i class="fas fa-crown" style="font-size: 24px;"></i>
                               Administrator 
                             {% else %}
+                            <i class="fas fa-user" style="font-size: 24px;"></i>
                               Moje konto
                               {% comment %} {{request.user.username}} {% endcomment %}
                             {% endif %}
                          </span> 
                       </button>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="{%url 'profile'%}">Pokaż profil</a>
-                        <a class="dropdown-item" href="{%url 'my_pets'%}">Twoje zwierzęta</a>
+                        <a class="dropdown-item" href="{%url 'profile'%}"><i class="fas fa-id-card"></i> Pokaż profil</a>
+                        <a class="dropdown-item" href="{%url 'my_pets'%}"><i class="fa fa-paw"></i> Twoje zwierzęta</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{%url 'logout'%}">Wyloguj</a>
+                        <a class="dropdown-item" href="{%url 'logout'%}"><i class="fas fa-sign-out-alt"></i> Wyloguj</a>
                       </div>
                     </div>
                   {%else%}
                     <div class="dropdown">
-                      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="f-w-600">
-                          <i class="fas fa-user" style="font-size: 36px;"></i></a> Gość
+                          <i class="fas fa-user" style="font-size: 24px;"></i></a> Gość
                         </span>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
