--- a/MyProject/templates/pets/my_pets.html
+++ b/MyProject/templates/pets/my_pets.html
@@ -25,6 +25,7 @@
     </div>
 
     <H1>Lista Twoich zwierząt:</H1>
+    
     {% if pet_page_obj == None %}
         <p>Aktualnie nie masz żadnych zwierząt</p>
     {% endif %}
@@ -43,7 +44,7 @@
                         {% include 'template_parts/pet_prof_listing.html' %}
 
                         <a class="btn btn-primary" href="{% url 'pet_profile'%}{{item.id}}" role="button" ><i class="fas fa-eye"></i> Pokaż</a>
-                        <a class="btn btn-primary"  href="{% url 'edit_pet_profile' item.id%}" role="button"><i class="far fa-edit"></i> Edytuj</a>
+                        <a class="btn btn-primary"  href="{% url 'edit_pet_profile' item.id%}" role="button"><i class="fas fa-edit"></i> Edytuj</a>
                         <!-- Button trigger modal -->
                         <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#petDeleteModalCenter" id="{{item.id}}">
                             <i class="far fa-trash-alt"></i> Usuń 
