--- a/MyProject/templates/pets/profile.html
+++ b/MyProject/templates/pets/profile.html
@@ -5,12 +5,10 @@
 {% block main %}
     {% block container %}
         {% for item in all %}
-            <section class=" profile rounded border border-5">
+            <section class=" profile rounded border border-3 shadow">
                 <div id="p-profile-left" class="col-sm-4">
                     <div class="row m-2 p-4">
-                        <div class="col">
-                            <img src="/media/{{item.image}}">
-                        </div>
+                        <img src="/media/{{item.image}}">
                     </div>
                 </div>
                 
@@ -18,15 +16,18 @@
                     <div class="row m-2">
                         <h6 class="border-bottom p-2">Podstawowe informacje</h6>
                         <div class="col-sm-6 mb-3">
-                            <p class="f-w-600">Mikroczip</p>
+                            <i class="fas fa-microchip"></i>
+                            <label for="chip_number" class="form-label f-w-600">Mikroczip</label>
                             <h6 class="text-muted">{{ item.chip_number }}</h6> 
                         </div>
                         <div class="col-sm-6 mb-3">
-                            <p class="f-w-600">Imię</p>
+                            <i class="fas fa-signature"></i>
+                            <label for="pet_name" class="form-label f-w-600">Imię</label>
                             <h6 class="text-muted">{{ item.pet_name }}</h6> 
                         </div>
                         <div class="col-sm-6 mb-3">
-                            <p class="f-w-600">Płeć</p>
+                            <i class="fas fa-venus-mars"></i>
+                            <label for="gender" class="form-label f-w-600">Płeć</label>
                             <h6 class="text-muted">
                                 {%if item.gender == 'Samiec' %}
                                     <i class="fa fa-mars gen-col-m"></i> 
@@ -40,7 +41,18 @@
                             <h6 class="text-muted">{{ item.pet_type }}</h6> 
                         </div>
                     </div>
-
+                    <div class="row m-2">
+                        <h6 class="border-bottom p-2">Status</h6>
+                        <div class="col-sm-6 mb-3">
+                            <h6 class="text-muted">Zaginął: 
+                                {% if item.is_lost%}
+                                    TAK
+                                {%else%}
+                                    NIE
+                                {% endif %}
+                            </h6>
+                        </div>
+                    </div>
                     <div class="row m-2">
                         <h6 class="border-bottom p-2">Opis</h6>
                         <div class="col-sm-6 mb-3">
@@ -51,21 +63,24 @@
                     <div class="row m-2">
                         <h6 class="border-bottom p-2">Dane kontaktowe</h6>
                         <div class="col-sm-6 mb-3">
-                            <p class="f-w-600">Telefon</p>
+                            <i class="fas fa-phone"></i>
+                            <label for="chip_number" class="form-label f-w-600">Telefon</label>
                             <h6 class="text-muted">{{ item.phone }}</h6> 
                         </div>
                         <div class="col-sm-6 mb-3">
-                            <p class="f-w-600">Adres e-mail</p>
+                            <i class="fas fa-envelope"></i>
+                            <label for="chip_number" class="form-label f-w-600">Adres e-mail</label>
                             <h6 class="text-muted">{{ item.email }}</h6> 
                         </div>
                         <div class="col-sm-6 mb-3">
-                            <p class="f-w-600">Województwo:</p>
+                            <i class="fas fa-map-marked-alt"></i>
+                            <label for="chip_number" class="form-label f-w-600">Ostatnia Lokalizacja</label>
                             <h6 class="text-muted">{{ item.region }}</h6> 
                         </div>
                     </div>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                         {% if item.owner_id == request.user.id%}
-                            <a class="btn btn-primary" href="{% url 'edit_pet_profile' item.id%}" role="button">Edytuj</a>
+                            <a class="btn btn-primary m-auto" href="{% url 'edit_pet_profile' item.id%}" role="button"><i class="fas fa-edit"></i> Edytuj</a>
                         {% endif %}
                     </div>
                 </div>
