--- a/MyProject/templates/template_parts/pagination.html
+++ b/MyProject/templates/template_parts/pagination.html
@@ -8,7 +8,7 @@
                 <a class="page-link" href="{% filter_url 1 'page' request.GET.urlencode %}">Pierwsza</a>
             </li>
             <li class="page-item ">
-                <a class="page-link" href="{% filter_url pet_page_obj.previous_page_number 'page' request.GET.urlencode %}">&laquo</a>
+                <a class="page-link" href="{% filter_url pet_page_obj.previous_page_number 'page' request.GET.urlencode %}"><i class="fas fa-angle-left"></i></a>
             </li>
             <li class="page-item ">
                 <a class="page-link" href="{% filter_url pet_page_obj.previous_page_number 'page' request.GET.urlencode %}">{{pet_page_obj.number|add:'-1'}}</a>
@@ -22,7 +22,7 @@
                 <a class="page-link" href="{% filter_url pet_page_obj.next_page_number 'page' request.GET.urlencode %}">{{pet_page_obj.number|add:'1'}}</a>
             </li>
             <li class="page-item ">
-                <a class="page-link" href="{% filter_url pet_page_obj.next_page_number 'page' request.GET.urlencode %}">&raquo</a>
+                <a class="page-link" href="{% filter_url pet_page_obj.next_page_number 'page' request.GET.urlencode %}"><i class="fas fa-angle-right"></i></a>
             </li>
             <li class="page-item ">
                 <a class="page-link" href="{% filter_url pet_page_obj.paginator.num_pages 'page' request.GET.urlencode %}">Ostatnia</a>
